--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -24,6 +24,10 @@
   border: 1px solid var(--neutral-900);
 }
 
+.btn-primary {
+  background-color: var(--primary-300);
+}
+
 // @media (max-width: 576px) {
 //   .btn {
 //     padding: 8px 16px;
