--- a/assets/scss/helper/_utils.scss
+++ b/assets/scss/helper/_utils.scss
@@ -104,6 +104,11 @@
     padding-right: 6px;
     width: calc(100% / 4);
   }
+  .col-md-2 {
+    padding-left: 6px;
+    padding-right: 6px;
+    width: calc(100% / 4 * 2);
+  }
   .col-md-4 .col-md-2 {
     padding-left: 6px;
     padding-right: 6px;
